--- a/src/app/components/common/usagePanel.html
+++ b/src/app/components/common/usagePanel.html
@@ -1,7 +1,8 @@
 <uib-accordion>
   <div uib-accordion-group is-open="ctrl.open">
     <uib-accordion-heading>
-      <span accordion-chevron is-open="ctrl.open">{{'Usage' | translate}}</span>
+      <accordion-chevron is-open="ctrl.open"></accordion-chevron>
+      <span>{{'Usage' | translate}}</span>
     </uib-accordion-heading>
     <div ng-if="ctrl.open">
       <usage ng-show="ctrl.hasReferrers()" usage="ctrl.usage" show-links="true" context="ctrl.context"></usage>
