--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -51,25 +51,27 @@
       <button-with-options icon-class="glyphicon glyphicon-plus" ng-show="ctrl.isEditing()" options="ctrl.addPropertyActions"></button-with-options>
     </div>
 
-    <accordion class="properties" ng-if="ctrl.class.properties.length > 0" open-id="ctrl.openPropertyId" drag-sortable="ctrl.properties" drag-disabled="!ctrl.isEditing()" on-reorder="ctrl.onPropertyReorder">
+    <accordion class="properties" ng-if="ctrl.class.properties.length > 0"
+               open-id="ctrl.openPropertyId"
+               drag-sortable="ctrl.properties"
+               drag-disabled="!ctrl.isEditing()"
+               on-reorder="ctrl.onPropertyReorder">
       <accordion-group ng-repeat="property in ctrl.properties track by property.internalId" identifier="property.internalId.uuid">
         <accordion-heading>
-          <div class="panel-heading" drag-sortable-item>
-            <h4 class="panel-title">
-              <a ng-class="{collapsed: !isOpen()}">
-                <span class="accordion-icon" ng-class="property.glyphIconClass"></span>
-                <span>{{property | translateLabel: ctrl.model}}</span>
-                <accordion-chevron is-open="isOpen()"></accordion-chevron>
-                <div class="property-ordering" ng-show="ctrl.isEditing()">
-                  <span class="fa fa-bars"></span>
-                </div>
-              </a>
-            </h4>
+          <div drag-sortable-item>
+            <a ng-class="{collapsed: !isOpen()}">
+              <span class="accordion-icon" ng-class="property.glyphIconClass"></span>
+              <span>{{property | translateLabel: ctrl.model}}</span>
+              <accordion-chevron is-open="isOpen()"></accordion-chevron>
+              <div class="property-ordering" ng-show="ctrl.isEditing()">
+                <span class="fa fa-bars"></span>
+              </div>
+            </a>
           </div>
         </accordion-heading>
 
         <accordion-body>
-          <property-view property="property" class="ctrl.class" model="ctrl.model"></property-view>
+          <property-view property="property" data-class="ctrl.class" model="ctrl.model"></property-view>
         </accordion-body>
       </accordion-group>
     </accordion>
