--- a/src/app/components/editor/selectionView.html
+++ b/src/app/components/editor/selectionView.html
@@ -1,21 +1,19 @@
 <div class="component">
-  <!-- FIXME: float temporarily disabled -->
-  <div show="ctrl.show" width="ctrl.editableController.width">
-    <div class="component-header">
-      <h3>
-        <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
-        <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel: ctrl.model}}</span>
-        <span class="glyphicon glyphicon-resize-full pull-right collapsable" ng-hide="ctrl.show === 0" ng-click="ctrl.enlargeSelection()"></span>
-        <span class="glyphicon glyphicon-resize-small pull-right collapsable" ng-hide="ctrl.show === 1" ng-click="ctrl.shrinkSelection()"></span>
-      </h3>
-    </div>
 
+  <div class="component-header">
+    <h3>
+      <span ng-class="ctrl.editableController.getEditable().glyphIconClass"></span>
+      <span ng-hide="ctrl.show === 2">{{ctrl.editableController.getEditable() | translateLabel: ctrl.model}}</span>
+    </h3>
+  </div>
+
+  <div class="component-content">
     <editable-entity-buttons context="ctrl.model" editable-controller="ctrl.editableController">
       <div ng-transclude="buttons"></div>
     </editable-entity-buttons>
-  </div>
 
-  <div class="selection-form">
-    <div ng-transclude="content"></div>
+    <div class="selection-form">
+      <div ng-transclude="content"></div>
+    </div>
   </div>
 </div>
