--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -1,40 +1,44 @@
-<div class="col-md-5">
+<div class="row">
 
-  <h4>{{ctrl.model.normalizedType + ' information' | capitalize | translate}}</h4>
+  <div class="col-lg-5">
 
-  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
-    <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" context="ctrl.model" ng-model="ctrl.model.label" />
-  </editable>
+    <h4>{{ctrl.model.normalizedType + ' information' | capitalize | translate}}</h4>
 
-  <editable data-title="Description" context="ctrl.model">
-    <textarea id="modelComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.model.comment"></textarea>
-  </editable>
+    <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
+      <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" context="ctrl.model" ng-model="ctrl.model.label" />
+    </editable>
 
-  <editable-multiple-language-select data-title="Model languages" id="modelLanguage" ng-model="ctrl.model.language" required="true"></editable-multiple-language-select>
+    <editable data-title="Description" context="ctrl.model">
+      <textarea id="modelComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.model.comment"></textarea>
+    </editable>
 
-  <editable-root-class ng-if="ctrl.model.isOfType('profile')" model="ctrl.model"></editable-root-class>
+    <editable-multiple-language-select data-title="Model languages" id="modelLanguage" ng-model="ctrl.model.language" required="true"></editable-multiple-language-select>
 
-  <non-editable data-title="Prefix" value="ctrl.model.prefix" context="ctrl.model"></non-editable>
-  <non-editable data-title="Namespace" value="ctrl.model.namespace" context="ctrl.model" clipboard="ctrl.model.namespace"></non-editable>
+    <editable-root-class ng-if="ctrl.model.isOfType('profile')" model="ctrl.model"></editable-root-class>
 
-  <h4 translate>Additional information</h4>
+    <non-editable data-title="Prefix" value="ctrl.model.prefix" context="ctrl.model"></non-editable>
+    <non-editable data-title="Namespace" value="ctrl.model.namespace" context="ctrl.model" clipboard="ctrl.model.namespace"></non-editable>
 
-  <div class="row">
-    <div class="col-md-6">
-      <non-editable data-title="Created at" value="ctrl.model.createdAt" context="ctrl.model"></non-editable>
+    <h4 translate>Additional information</h4>
+
+    <div class="row">
+      <div class="col-md-6">
+        <non-editable data-title="Created at" value="ctrl.model.createdAt" context="ctrl.model"></non-editable>
+      </div>
+      <div class="col-md-6">
+        <non-editable data-title="Modified at" value="ctrl.model.modifiedAt" context="ctrl.model"></non-editable>
+      </div>
     </div>
-    <div class="col-md-6">
-      <non-editable data-title="Modified at" value="ctrl.model.modifiedAt" context="ctrl.model"></non-editable>
-    </div>
+
+    <usage-panel entity="ctrl.model"></usage-panel>
   </div>
 
-  <usage-panel entity="ctrl.model"></usage-panel>
-</div>
+  <div class="col-lg-6 offset-lg-1">
+    <vocabularies-view model="ctrl.model"></vocabularies-view>
+    <reference-datas-view model="ctrl.model"></reference-datas-view>
+    <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
+    <technical-namespaces model="ctrl.model"></technical-namespaces>
+    <links-view model="ctrl.model"></links-view>
+  </div>
 
-<div class="col-md-6 col-md-offset-1">
-  <vocabularies-view model="ctrl.model"></vocabularies-view>
-  <reference-datas-view model="ctrl.model"></reference-datas-view>
-  <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
-  <technical-namespaces model="ctrl.model"></technical-namespaces>
-  <links-view model="ctrl.model"></links-view>
 </div>
