Contributor / classification added to new model creation and model view

--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -34,6 +34,8 @@
   </div>
 
   <div class="col-lg-6 offset-lg-1">
+    <classifications-view value="ctrl.model" context="ctrl.model"></classifications-view>
+    <contributors-view value="ctrl.model" context="ctrl.model"></contributors-view>
     <vocabularies-view model="ctrl.model"></vocabularies-view>
     <reference-datas-view model="ctrl.model"></reference-datas-view>
     <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
