--- a/src/app/components/editor/predicateView.html
+++ b/src/app/components/editor/predicateView.html
@@ -5,7 +5,7 @@
         <selection-buttons>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.predicate" context="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.predicate" ng-hide="ctrl.isEditing()"></history>
-          <editable-state-select class="pull-right" ng-if="!ctrl.predicate.unsaved" id="predicateState" state="ctrl.editableInEdit.state" model="ctrl.model"></editable-state-select>
+          <editable-state-select class="pull-right" ng-if="!ctrl.predicate.unsaved" id="predicateState" state="ctrl.editableInEdit.status" model="ctrl.model"></editable-state-select>
         </selection-buttons>
 
         <selection-content>
