--- a/src/app/components/editor/classForm.html
+++ b/src/app/components/editor/classForm.html
@@ -16,6 +16,7 @@
 
 <div class="row">
   <div class="col-md-6">
+
     <editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" link="ctrl.linkToIdClass()" context="ctrl.model" clipboard="ctrl.class.id.uri">
       <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.class.inUnstableState" />
     </editable>
@@ -29,6 +30,7 @@
     </editable>
   </div>
   <div class="col-md-6">
+    <editable-state-select ng-if="!ctrl.class.unsaved" id="classState" state="ctrl.class.status" model="ctrl.model"></editable-state-select>
     <defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
     <editable-multiple-uri-select id="equivalentClass" type="class" ng-model="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}"></editable-multiple-uri-select>
   </div>
