--- a/src/app/components/editor/predicateForm.html
+++ b/src/app/components/editor/predicateForm.html
@@ -4,12 +4,11 @@
 
     <button ng-if="ctrl.isEditing() && !ctrl.predicate.unsaved"
             type="button"
-            class="btn btn-action pull-right"
+            class="btn btn-link pull-right"
             style="margin-left: 5px"
             ng-disabled="!ctrl.predicate.inUnstableState"
-            ng-click="ctrl.changeType()" uib-tooltip="{{'Convert to ' + ctrl.changedType | translate}}">
-      <i class="glyphicon glyphicon-arrow-right"></i>
-      <i ng-class="ctrl.changeTypeIconClass"></i>
+            ng-click="ctrl.changeType()">
+      {{'Convert to ' + ctrl.changedType | translate}}
     </button>
   </div>
 </div>
@@ -41,6 +40,8 @@
   </div>
 
   <div class="col-md-6">
+
+    <editable-state-select ng-if="!ctrl.predicate.unsaved" id="predicateState" state="ctrl.predicate.status" model="ctrl.model"></editable-state-select>
     <editable-range-select ng-if="ctrl.predicate.isAttribute()" id="predicateRange" range="ctrl.predicate.dataType"></editable-range-select>
 
     <editable ng-if="ctrl.predicate.isAssociation()" data-title="Value class" name="Value class" link="ctrl.linkToValueClass()" context="ctrl.model">
