--- a/src/app/components/editor/searchClassModal.html
+++ b/src/app/components/editor/searchClassModal.html
@@ -1,93 +1,123 @@
 <form name="form" class="search-class">
-  <modal-template editing="false">
-    <modal-title>
+
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
       <span ng-show="ctrl.onlySelection" translate>Select class</span>
       <span ng-hide="ctrl.onlySelection" translate>Add class</span>
-    </modal-title>
+    </h4>
+  </div>
 
-    <modal-body class="full-height">
+  <div class="modal-body full-height">
+    <div class="row mb-2">
+      <div class="col-12">
 
-      <div class="row">
+        <text-filter class="pull-left"
+                     search-text="ctrl.searchText"
+                     search-controller="ctrl"
+                     content-extractors="ctrl.contentExtractors"
+                     placeholder="'search class'"></text-filter>
 
-        <div class="col-md-4">
-
-          <model-language-chooser context="ctrl.model"></model-language-chooser>
-
-          <p ng-hide="ctrl.onlySelection" translate>Class search or create info</p>
-          <p ng-show="ctrl.onlySelection" translate>Class search info</p>
-
-          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search class'"></text-filter>
-
-          <div class="search-panel">
-            <span class="title" translate>Filter results</span>
-
-            <model-filter search-controller="ctrl" type="class" model="ctrl.model" default-show="ctrl.defaultToCurrentModel ? ctrl.model : null"></model-filter>
-            <profile-filter search-controller="ctrl" only-selection="ctrl.onlySelection"></profile-filter>
-            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
-            <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
-          </div>
+        <div class="pull-left mt-2 ml-2">
+          <content-filter search-controller="ctrl"
+                          content-matchers="ctrl.contentMatchers"
+                          content-extractors="ctrl.contentExtractors"></content-filter>
         </div>
 
-        <div class="col-md-4 search-results">
-          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+        <model-language-chooser class="pull-right"
+                                context="ctrl.model"></model-language-chooser>
+      </div>
+    </div>
 
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-            <div>
-              <i ng-class="searchResult.glyphIconClass"></i>
-              <h5>
+    <div class="row mb-2">
+      <div class="col-12">
+        <model-filter class="pull-left"
+                      search-controller="ctrl"
+                      type="class"
+                      model="ctrl.model"
+                      default-show="ctrl.defaultToCurrentModel ? ctrl.model : null"></model-filter>
+
+        <div class="pull-left mt-2 ml-2">
+          <profile-filter search-controller="ctrl"
+                          only-selection="ctrl.onlySelection"></profile-filter>
+        </div>
+
+        <excluded-filter search-controller="ctrl"
+                         search-text="ctrl.searchText"
+                         exclude="ctrl.exclude"></excluded-filter>
+      </div>
+    </div>
+
+    <div class="row full-height" style="height: calc(100% - 110px)">
+      <div class="col-6">
+        <div class="content-box">
+          <div class="search-results">
+
+            <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+            <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+
+              <span class="title">
+                <i ng-class="searchResult.glyphIconClass"></i>
                 <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
                 <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight>
-              </h5>
-            </div>
-            <p><highlight text="searchResult.comment" context="ctrl.model" search="ctrl.searchText"></highlight></p>
+              </span>
 
-            <div class="origin">
-              <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.model}}</span>
-              <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
-            </div>
-          </search-results>
+              <span class="body">
+                <highlight text="searchResult.comment" context="ctrl.model" search="ctrl.searchText"></highlight>
+              </span>
+
+              <span class="origin">
+                <span class="pull-left">{{searchResult.definedBy | translateLabel: ctrl.model}}</span>
+                <span class="pull-right" ng-bind-html="searchResult.id.compact | highlight: ctrl.searchText"></span>
+              </span>
+
+            </search-results>
+          </div>
         </div>
+      </div>
 
-        <div class="col-md-4 search-selection">
-          <class-form ng-if="!ctrl.isSelectionExternalEntity() && ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model" open-property-id="openPropertyId"></class-form>
+      <div class="col-6 search-selection">
+        <class-form ng-if="!ctrl.isSelectionExternalEntity() && ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model" open-property-id="openPropertyId"></class-form>
 
-          <div ng-if="ctrl.isSelectionExternalEntity()">
+        <div ng-if="ctrl.isSelectionExternalEntity()">
 
-            <editable data-title="External URI" context="ctrl.model" autofocus>
-              <div class="input-group input-group-md">
-                <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.id" />
-              </div>
+          <editable data-title="External URI" context="ctrl.model" autofocus>
+            <div class="input-group input-group-md">
+              <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.id" />
+            </div>
+          </editable>
+
+          <div ng-if="ctrl.externalClass === null">
+            <editable data-title="Class label" context="ctrl.model">
+              <input type="text" class="form-control" string-input="label" required ng-model="ctrl.selection.label" />
             </editable>
-
-            <div ng-if="ctrl.externalClass === null">
-              <editable data-title="Class label" context="ctrl.model">
-                <input type="text" class="form-control" string-input="label" required ng-model="ctrl.selection.label" />
-              </editable>
-            </div>
-
-            <div ng-if="ctrl.externalClass">
-              <non-editable data-title="Class label" value="ctrl.externalClass.label" context="ctrl.model"></non-editable>
-            </div>
           </div>
 
-          <error-panel error="ctrl.excludeError"></error-panel>
+          <div ng-if="ctrl.externalClass">
+            <non-editable data-title="Class label" value="ctrl.externalClass.label" context="ctrl.model"></non-editable>
+          </div>
         </div>
-      </div>
 
-    </modal-body>
-
-    <modal-buttons>
-      <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
-        <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
-        <span>{{ctrl.cannotConfirm | translate}}</span>
+        <error-panel error="ctrl.excludeError"></error-panel>
       </div>
-      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button"
-              class="btn btn-action confirm"
-              ng-click="ctrl.confirm()"
-              ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalClassPending()">
-        {{ctrl.textForSelection(ctrl.selection) | translate}}
-      </button>
-    </modal-buttons>
-  </modal-template>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+
+    <button type="button"
+            class="btn btn-action confirm"
+            ng-click="ctrl.confirm()"
+            ng-disabled="!ctrl.selection || ctrl.cannotConfirm || (form.editing && (form.$invalid || form.$pending)) || ctrl.isExternalClassPending()">
+      {{ctrl.textForSelection(ctrl.selection) | translate}}
+    </button>
+
+    <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
+
+    <div class="alert alert-danger" role="alert" ng-show="ctrl.cannotConfirm">
+      <span class="fa fa-exclamation-circle" aria-hidden="true"></span>
+      <span>{{ctrl.cannotConfirm | translate}}</span>
+    </div>
+  </div>
 </form>
