--- a/src/app/components/editor/searchConceptModal.html
+++ b/src/app/components/editor/searchConceptModal.html
@@ -1,102 +1,109 @@
 <form name="form" class="search-concept">
-  <modal-template editing="true">
-    <modal-title>{{ctrl.defineConceptTitle | translate}}</modal-title>
 
-    <modal-body class="full-height">
+  <div class="modal-header">
+    <h4 class="modal-title">
+      {{ctrl.defineConceptTitle | translate}}
+    </h4>
+  </div>
 
-      <div class="row">
+  <div class="modal-body full-height">
 
-        <div class="col-md-4">
+    <div class="row mb-2">
+      <div class="col-12">
 
-          <model-language-chooser context="ctrl.model"></model-language-chooser>
+        <text-filter class="pull-left"
+                     search-text="ctrl.searchText"
+                     search-controller="ctrl"
+                     content-extractors="ctrl.contentExtractors"
+                     placeholder="'Search from concept database'"></text-filter>
 
-          <p translate>Concept search info</p>
-
-          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'Search from concept database'"></text-filter>
-
-          <div class="search-panel">
-            <span class="title" translate>Filter results</span>
-            <div class="form-group">
-              <label for="vocabulary" translate>Vocabulary filter</label>
-              <div class="input-group input-group-lg">
-                <div class="selectContainer">
-                  <select id="vocabulary" class="form-control" ng-model="ctrl.selectedVocabulary" ignore-dirty
-                          ng-options="(vocabulary.title | translateValue: ctrl.model) for vocabulary in ctrl.vocabularies">
-                    <option value="" translate>All vocabularies</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <a ng-show="ctrl.selectedVocabulary && !ctrl.selectedVocabulary.local" ng-href="{{ctrl.selectedVocabulary.href}}" target="_blank" translate>Browse vocabulary</a>
-        </div>
-
-        <div class="col-md-4 search-results">
-          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
-
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selectedItem" on-select="ctrl.selectItem(item)" edit-in-progress="ctrl.editInProgress">
-            <!-- TODO duplication with conceptEditorModal search results -->
-            <div>
-              <i ng-class="searchResult.glyphIconClass"></i>
-              <h5>
-                <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
-                <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight> <span ng-show="searchResult.suggestion">({{'suggestion' | translate}})</span>
-              </h5>
-            </div>
-
-            <div class="origin">
-              <div class="pull-left">
-                <span ng-repeat="vocabulary in searchResult.vocabularies">
-                  {{vocabulary.title | translateValue: ctrl.model}} <span ng-show="!$last">, </span>
-                </span>
-              </div>
-              <span class="pull-right" ng-if="searchResult.id.isUrl()">{{searchResult.id.url}}</span>
-            </div>
-          </search-results>
-        </div>
-
-        <div class="col-md-4 search-selection">
-          <div ng-if="ctrl.selection">
-
-            <concept-form ng-if="ctrl.isSelectionConcept()" concept="ctrl.selection" model="ctrl.model"></concept-form>
-
-            <div ng-if="ctrl.isSelectionNewConceptData()">
-
-              <editable data-title="Vocabulary" context="ctrl.model" autofocus>
-                <select id="vocabularySelection" class="form-control" required ng-model="ctrl.selection.vocabulary"
-                        ng-options="(vocabulary.title | translateValue: ctrl.model) for vocabulary in ctrl.vocabularies">
-                </select>
-              </editable>
-
-              <editable data-title="Concept label" context="ctrl.model">
-                <div class="input-group input-group-md">
-                  <input id="conceptLabel" type="text" class="form-control" required string-input="label" ng-model="ctrl.selection.label" />
-                </div>
-              </editable>
-
-              <editable data-title="Definition" context="ctrl.model">
-                <div class="input-group input-group-md">
-                  <textarea id="conceptComment" class="form-control" required string-input ng-model="ctrl.selection.comment"></textarea>
-                </div>
-              </editable>
-
-              <editable-concept-select concept="ctrl.selection.broaderConcept" data-title="Broader concept" model="ctrl.model" allow-suggestions="false"></editable-concept-select>
-
-              <br />
-              <p><span translate>Concept is suggested to vocabulary</span> {{ctrl.selection.vocabulary.title | translateValue: ctrl.model}}</p>
-            </div>
-
-          </div>
-        </div>
-
+        <model-language-chooser class="pull-right"
+                                context="ctrl.model"></model-language-chooser>
       </div>
-    </modal-body>
+    </div>
 
-    <modal-buttons>
-      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-      <button type="button" class="btn btn-action confirm" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selection || form.$invalid || form.$pending">{{ctrl.buttonTitle | translate}}</button>
-    </modal-buttons>
+    <div class="row mb-2">
+      <div class="col-12">
+        <select id="vocabulary"
+                class="form-control"
+                style="width: auto"
+                ng-model="ctrl.selectedVocabulary"
+                ignore-dirty
+                ng-options="(vocabulary.title | translateValue: ctrl.model) for vocabulary in ctrl.vocabularies">
+          <option value="" translate>All vocabularies</option>
+        </select>
+      </div>
+    </div>
 
-  </modal-template>
+    <div class="row full-height" style="height: calc(100% - 110px)">
+      <div class="col-6">
+        <div class="content-box">
+          <div class="search-results">
+
+            <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+            <search-results ng-if="!ctrl.loadingResults"
+                            items="ctrl.searchResults"
+                            selected="ctrl.selectedItem"
+                            on-select="ctrl.selectItem(item)"
+                            edit-in-progress="ctrl.editInProgress">
+
+              <span class="title">
+                <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
+                <highlight text="searchResult.label" context="ctrl.model" search="ctrl.searchText"></highlight>
+              </span>
+
+              <div class="origin">
+                <span class="pull-left" ng-if="searchResult.id.isUrl()">{{searchResult.id.url}}</span>
+              </div>
+            </search-results>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 search-selection">
+
+        <div ng-if="ctrl.selection">
+          <concept-form ng-if="ctrl.isSelectionConcept()" concept="ctrl.selection" model="ctrl.model"></concept-form>
+
+          <div ng-if="ctrl.isSelectionNewConceptData()">
+
+            <editable data-title="Vocabulary" context="ctrl.model" autofocus>
+              <select id="vocabularySelection" class="form-control" required ng-model="ctrl.selection.vocabulary"
+                      ng-options="(vocabulary.title | translateValue: ctrl.model) for vocabulary in ctrl.vocabularies">
+              </select>
+            </editable>
+
+            <editable data-title="Concept label" context="ctrl.model">
+              <input id="conceptLabel" type="text" class="form-control" required string-input="label" ng-model="ctrl.selection.label" />
+            </editable>
+
+            <editable data-title="Definition" context="ctrl.model">
+              <textarea id="conceptComment" class="form-control" required string-input ng-model="ctrl.selection.comment"></textarea>
+            </editable>
+
+            <br />
+            <p><span translate>Concept is suggested to vocabulary</span> {{ctrl.selection.vocabulary.title | translateValue: ctrl.model}}</p>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="modal-footer">
+
+    <button type="button"
+            class="btn btn-action confirm"
+            ng-click="ctrl.confirm()"
+            ng-disabled="!ctrl.selection || form.$invalid || form.$pending">{{ctrl.buttonTitle | translate}}</button>
+
+    <button type="button"
+            class="btn btn-link cancel"
+            ng-click="ctrl.close()" translate>Cancel</button>
+  </div>
+
 </form>
