--- a/src/app/components/model/searchVocabularyModal.html
+++ b/src/app/components/model/searchVocabularyModal.html
@@ -1,38 +1,63 @@
-<div class="search-vocabulary">
-  <modal-template>
-    <modal-title translate>Search vocabularies</modal-title>
+<div class="modal-header">
+  <h4 class="modal-title">
+    <a><i ng-click="$dismiss('cancel')" class="fa fa-times"></i></a>
+    <span translate>Search vocabularies</span>
+  </h4>
+</div>
 
-    <modal-body class="full-height">
-      <div class="row">
-        <div class="col-md-6">
+<div class="modal-body full-height">
 
-          <text-filter search-text="ctrl.searchText" search-controller="ctrl" content-extractors="ctrl.contentExtractors" placeholder="'search vocabulary'"></text-filter>
+  <div class="row mb-2">
+    <div class="col-12">
 
-          <div class="search-panel">
-            <span class="title" translate>Filter results</span>
+      <text-filter class="pull-left"
+                   search-text="ctrl.searchText"
+                   search-controller="ctrl"
+                   content-extractors="ctrl.contentExtractors"
+                   placeholder="'search vocabulary'"></text-filter>
 
-            <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
-            <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
-          </div>
-        </div>
+      <model-language-chooser class="pull-right" context="ctrl.context"></model-language-chooser>
+    </div>
+  </div>
 
-        <div class="col-md-6 search-results">
+  <div class="row mb-2">
+    <div class="col-12">
+      <excluded-filter search-controller="ctrl" search-text="ctrl.searchText" exclude="ctrl.exclude"></excluded-filter>
+      <content-filter search-controller="ctrl" content-matchers="ctrl.contentMatchers" content-extractors="ctrl.contentExtractors"></content-filter>
+    </div>
+  </div>
+
+  <div class="row full-height" style="height: calc(100% - 135px)">
+    <div class="col-12">
+      <div class="content-box">
+        <div class="search-results">
+
           <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
-          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-            <h5><highlight text="searchResult.title" context="ctrl.context" search="ctrl.searchText"></highlight></h5>
-            <p><highlight text="searchResult.description" context="ctrl.context" search="ctrl.searchText"></highlight></p>
+          <div class="no-search-results" ng-show="ctrl.searchText && ctrl.searchResults.length === 0" translate>No search results</div>
 
-            <div class="origin">
-              <span class="pull-left">{{searchResult.material.code}}</span>
-            </div>
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" selected="ctrl.selected" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+
+            <span class="title">
+              <highlight text="searchResult.title" context="ctrl.context" search="ctrl.searchText"></highlight>
+            </span>
+
+            <span class="body">
+              <highlight text="searchResult.description" context="ctrl.context" search="ctrl.searchText"></highlight>
+            </span>
+
+            <span class="origin">
+              <span class="pull-left">{{searchResult.id.uri}}</span>
+            </span>
+
           </search-results>
+
         </div>
       </div>
-    </modal-body>
+    </div>
+  </div>
+</div>
 
-    <modal-buttons>
-      <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
-    </modal-buttons>
-  </modal-template>
+<div class="modal-footer">
+  <button type="button" class="btn btn-link cancel" ng-click="ctrl.close()" translate>Cancel</button>
 </div>
