--- a/src/app/components/editor/searchConceptModal.html
+++ b/src/app/components/editor/searchConceptModal.html
@@ -65,6 +65,7 @@
       <div class="col-6 search-selection">
 
         <div ng-if="ctrl.selection">
+
           <concept-form ng-if="ctrl.isSelectionConcept()" concept="ctrl.selection" model="ctrl.model"></concept-form>
 
           <div ng-if="ctrl.isSelectionNewConceptData()">
@@ -80,7 +81,7 @@
             </editable>
 
             <editable data-title="Definition" context="ctrl.model">
-              <textarea id="conceptComment" class="form-control" required string-input ng-model="ctrl.selection.comment"></textarea>
+              <textarea id="conceptComment" class="form-control" required string-input ng-model="ctrl.selection.definition"></textarea>
             </editable>
 
             <br />
