--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -44,12 +44,11 @@
 
       <div class="row">
         <div class="col-md-12">
-          <non-editable ng-if="!ctrl.entity.subject.suggestion" data-title="Concept definition" value="ctrl.entity.subject.comment" context="ctrl.model"></non-editable>
-          <non-editable ng-if="ctrl.entity.subject.suggestion" data-title="Concept suggestion definition" value="ctrl.entity.subject.comment" context="ctrl.model"></non-editable>
+          <non-editable data-title="Concept definition" value="ctrl.entity.subject.definition" context="ctrl.model"></non-editable>
         </div>
       </div>
 
-      <div class="row" ng-if="!ctrl.entity.subject.legacy">
+      <div class="row">
         <div class="col-md-12">
           <non-editable-vocabulary vocabularies="ctrl.entity.subject.vocabularies" context="ctrl.model"></non-editable-vocabulary>
         </div>
