Rename comment as definition in concept relared calls / views

--- a/src/app/components/editor/searchConceptModal.html
+++ b/src/app/components/editor/searchConceptModal.html
@@ -81,7 +81,7 @@
             </editable>
 
             <editable data-title="Definition" context="ctrl.model">
-              <textarea id="conceptComment" class="form-control" required string-input ng-model="ctrl.selection.definition"></textarea>
+              <textarea id="conceptDefinition" class="form-control" required string-input ng-model="ctrl.selection.definition"></textarea>
             </editable>
 
             <br />
